2016-07-13  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphany_any_periphal_active_p): Rename to ...
	(epiphany_any_peripheral_active_p): ... this.
	* epiphany-sim.h (epiphany_any_periphal_active_p): Rename to ...
	(epiphany_any_peripheral_active_p): ... this.
	* mloop.in: Change epiphany_any_periphal_active_p to
	epiphany_any_peripheral_active_p.
	* sim-main.h ((SIM_ENGINE_HALT_HOOK): Change
	epiphany_any_periphal_active_p to epiphany_any_peripheral_active_p.

2016-07-13  Ola Jeppsson  <ola@adapteva.com>

	* sim-main.h (SIM_ENGINE_HALT_HOOK): Null check cpu before calling
	epiphany_any_periphal_active_p ().

2016-07-12  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_cpu_reset): Don't call SET_H_INT_IDLEBIT.
	Hardware is removed in cpu definition file.

2016-07-08  Ola Jeppsson  <ola@adapteva.com>

	* traps.c (epiphany_rti): Do not adjust iret when returning from
	idle here, let the 'idle' semantics in epiphany.cpu handle that.

2016-07-08  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Add back support for relative/absolute
	path for --host argument.

2016-06-17  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_shm_mmr_write): Fix SEGFAULT when connected as
	client.

2016-06-17  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Check for --host argument in
	PATH, not just in the current working directory.

2016-03-13  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (extract_mant): Declare as static inline.
	(extract_exp): Likewise.
	(extract_sign): Likewise.
	(isDenormalOrZero): Likewise.
	(isDenormal): Likewise.
	(makeZero): Likewise.
	(makeNegative): Likewise.
	(makePositive): Likewise.
	(isZero): Likewise.
	(isNegative): Likewise.
	(isInf): Likewise.
	(isNAN): Likewise.
	(makeNAN): Likewise.
	* oob-events.c (epiphany_handle_oob_events): Don't declare as
	inline.
	* oob-events.h (epiphany_handle_oob_events): Update function
	prototype.

2016-02-15  Ola Jeppsson  <ola@adapteva.com>
