@@ -1,3 +1,8 @@
+2016-07-22  Ola Jeppsson  <ola@adapteva.com>
+
+	* epiphany-elf-sim.py.in (run_inferior): Add PAL support. Don't
+	override environment variables that are already present.
+
 2016-07-13  Ola Jeppsson  <ola@adapteva.com>
 
 	* epiphany.c (epiphany_any_periphal_active_p): Rename to ...
